# yaserde

examples/: Cargo.toml
examples/src/: gldf.rs  lib.rs
yaserde/: Cargo.toml
yaserde_derive/: Cargo.toml
yaserde_derive/src/common/: attribute.rs  field.rs
yaserde_derive/src/de/: expand_struct.rs
yaserde_derive/src/ser/: expand_enum.rs  expand_struct.rs
